[package]
name = "interrupt-uart"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
nb = "1.0"
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.14", features = ["stm32f401", "rt"] }
heapless = "0.7"
rtic = { version = "2.0", features = ["thumbv7-backend"] }

[[bin]]
name = "basic_interrupt"
path = "src/basic_interrupt.rs"

[[bin]]
name = "buffered_uart"
path = "src/buffered_uart.rs"

[[bin]]
name = "command_parser"
path = "src/command_parser.rs"

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
debug = true
lto = true
opt-level = "s"